# KnucklesEditor

./: .gitignore  CMakeLists.txt  README.md
run/: cmake.bat  cmake.sh  run.sh
src/: Editor.cpp
